# hybrid-flow

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  missing_chapters_analysis.txt  pyproject.toml
analysis/: baseline_version_id.txt
docs/: migration_monitoring.md  migration_plan.md  neo4j_validation.md  neo4j_versioning_migration.md  rollback_procedure.md  schema_changes.md  troubleshooting.md  validation_checklist.md  validation_report_template.md  versioning_spec.md
scripts/: clean_duplicates.py  clean_neo4j_duplicates.py  collect_metrics.py  find_missing_sections.py  fix_bailey_chapter_numbers.py  fix_json_metadata.py  migrate_add_cross_references.py  migrate_add_sequential_links.py  run_migration.sh  test_cross_references.py  test_hybrid_search_expansion.py  test_medical_search.py  test_paragraph_expansion.py  test_references_with_expansion.py  test_section_context.py  test_versioned_ingestion.py  verify_chunk_consistency.py  verify_section_counts.py  verify_sequential_links.py
src/hybridflow/: __init__.py  api.py  models.py
src/hybridflow/cli/: __init__.py  query.py
src/hybridflow/ingestion/: pipeline.py
src/hybridflow/parsing/: chunk_generator.py  embedder.py
src/hybridflow/retrieval/: __init__.py  query.py
src/hybridflow/storage/: metadata_db.py  models.py  neo4j_client.py  qdrant_client.py  version_manager.py
src/hybridflow/validation/: error_handler.py  loader.py
tests/: conftest.py  test_chunk_generator.py  test_citation_and_config.py  test_embedder.py  test_loader.py  test_metadata_db.py  test_models.py  test_neo4j_client.py  test_pipeline.py  test_qdrant_client.py  test_query.py  test_query_engine.py  test_versioning_comprehensive.py
