[tool.poetry]
name = "hybridflow"
version = "0.1.0"
description = "Adaptive ingestion pipeline for hierarchical structured data with hybrid vector-graph storage, automatic schema validation with graceful degradation, multi-tier parsing strategies, version tracking, and comprehensive quality monitoring."
authors = ["Rushir Bhavsar"]
readme = "README.md"
packages = [{include = "hybridflow", from = "src"}]
license = "Proprietary"
keywords = ["data-pipeline", "vector-database", "graph-database", "qdrant", "neo4j", "data-ingestion"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.0"
pydantic-settings = "^2.1.0"
jsonschema = "^4.20.0"
qdrant-client = "^1.7"
sentence-transformers = "^2.2"
transformers = "^4.36.0"
neo4j = "^5.14"
sqlalchemy = "^2.0"
alembic = "^1.13.0"
pandas = "^2.1.0"
numpy = "^1.26.0"
great-expectations = "^0.18.0"
click = "^8.1.0"
typer = "^0.9.0"
rich = "^13.7.0"
tabulate = "^0.9.0"
structlog = "^24.1.0"
python-json-logger = "^2.0.0"
prometheus-client = "^0.19.0"
python-dotenv = "^1.0.0"
pyyaml = "^6.0.0"
orjson = "^3.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"
pytest-mock = "^3.12.0"
pytest-benchmark = "^4.0.0"
pytest-docker = "^2.0"
hypothesis = "^6.92.0"
black = "^23.12.0"
ruff = "^0.1.9"
mypy = "^1.8.0"
pre-commit = "^3.6.0"
mkdocs = "^1.5.0"
mkdocs-material = "^9.5.0"
pdoc = "^14.3.0"
tox = "^4.11.0"

[tool.poetry.scripts]
hybridflow = "hybridflow.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.tox
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "qdrant_client.*",
    "neo4j.*",
    "great_expectations.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=hybridflow --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*", "*/venv/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
